Fix slider caption so is visible on IE11

--- a/src/app/blocks/samples/skrCards/skr.css
+++ b/src/app/blocks/samples/skrCards/skr.css
@@ -491,7 +491,12 @@
   font-weight: bold;
   border-bottom: 2px solid #33ed73;
 }
-
+.entryscape .slick-slide .slider-caption{
+  line-height: 20px;
+}
+.entryscape .slider-container .slick-dots{
+  margin-bottom:0;
+}
 .entryscape .slick-prev:before,
 .slick-next:before {
   font-family: 'FontAwesome' !important;
